--- a/app/scss/_homePage.scss
+++ b/app/scss/_homePage.scss
@@ -2,6 +2,27 @@ $breakPoint1: 1610px;
 $breakPoint2: 1200px;
 $breakPoint3: 880px;
 
+.homeDash {
+	background-color: #222;
+	color: white;
+	.card {
+		border: none;
+		background-color: lighten(#222, 5%);
+	}
+	.cdx-button {
+		background-color: #222;
+		color: rgba(white, 0.7);
+		&:hover {
+			background-color: lighten(#222, 5%);
+		}
+	}
+	.ce-toolbar__settings-btn, .ce-toolbar__plus, .ce-toolbox__button {
+		&:not(.ce-toolbox__button--active) {
+			color: white;
+		}
+	}
+}
+
 #snackbar {
 	min-width: 300px;
 	max-width: 600px;
@@ -30,15 +51,12 @@ $breakPoint3: 880px;
 
 #imageCropContainer {
 	display: none;
+	max-height: 50vh;
 	img {
 		display: block;
 		max-width: 100%;
 	}
 }
-
-// #cropper {
-// 	width: 400px;
-// }
 
 .container {
 	width: 1600px;
@@ -72,6 +90,9 @@ $breakPoint3: 880px;
 	order: 1;
 	> .card {
 		position: relative;
+		p:last-of-type {
+			margin-bottom: 24px;
+		}
 	}
 	@media (max-width: $breakPoint1) {
 		position: inherit;
@@ -81,16 +102,26 @@ $breakPoint3: 880px;
 			height: calc(100% - 24px);
 		}
 	}
+	@media (max-width: 700px) {
+		width: 100%;
+	}
 }
 
 .profileImage  {
 	width: 100px;
 	border-radius: 50%;
+	margin: 0 auto 12px auto;
 }
 
 .actions {
 	.card {
 		text-align: center;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		h2 {
+			margin: 8px 0 16px 0;
+		}
 		.buttons {
 			@media (max-width: $breakPoint1) {
 				margin-bottom: 24px;
@@ -99,6 +130,9 @@ $breakPoint3: 880px;
 				display: inline-block;
 				margin: 4px 0;
 			}
+			span:last-of-type {
+				margin-bottom: 12px;
+			}
 		}
 	}
 	.accountButton {
@@ -106,22 +140,24 @@ $breakPoint3: 880px;
 		padding: 8px 24px;
 		border-radius: 4px;
 		border: none;
-		background-color: lightblue;
+		background-color: #366371;
 		font-size: 1em;
 		color: white;
 		transition: 0.2s;
 		cursor: pointer;
 		outline: none;
 		&:hover {
-			background-color: blue;
+			background-color: lighten(#366371, 10%);
 		}
 	}
 }
 
 .instructions {
 	order: 3;
+	margin-top: 24px;
 	@media (max-width: $breakPoint1) {
 		order: 2;
+		margin-top: 0;
 	}
 	p {
 		margin-top: 8px;
