--- a/app/scss/_loginPage.scss
+++ b/app/scss/_loginPage.scss
@@ -1,5 +1,34 @@
 $transition: 0.15s;
 
+$background: #222;
+$backgroundCard: lighten($background, 5%);
+$textColor: white;
+
+body.theme {
+	background-color: $background;
+	color: $textColor;
+	.loginBox {
+		background-color: $backgroundCard;
+	}
+	.inputField {
+		input, label {
+			background-color: $backgroundCard;
+		}
+		input {
+			color: $textColor
+		}
+		input:focus ~ .inputBorder {
+			border: 2px solid $textColor;
+		}
+		.inputBorder {
+			border: 1px solid rgba($textColor, 0.2);
+		}
+		&:hover .inputBorder {
+			border: 1px solid rgba($textColor, 0.5);
+		}
+	}
+}
+
 .loginBox {
 	padding: 24px;
 	position: absolute;
@@ -7,8 +36,28 @@ $transition: 0.15s;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+	border-radius: 8px;
 	h2 {
 		margin-bottom: 8px;
+	}
+	.loginButtonBox {
+		display: flex;
+		justify-content: flex-end;
+		.submitButton {
+			text-decoration: none;
+			padding: 8px 24px;
+			border-radius: 4px;
+			border: none;
+			background-color: #366371;
+			font-size: 1em;
+			color: white;
+			transition: 0.2s;
+			cursor: pointer;
+			outline: none;
+			&:hover {
+				background-color: lighten(#366371, 10%);
+			}
+		}
 	}
 }
 
@@ -17,7 +66,6 @@ $transition: 0.15s;
 	margin-bottom: 12px;
 	min-height: 40px;
 	position: relative;
-
 	label {
 		position: absolute;
 		top: 12px;
@@ -29,7 +77,6 @@ $transition: 0.15s;
 		transition: $transition;
 		pointer-events: none;
 	}
-
 	input {
 		width: 100%;
 		height: 100%;
@@ -40,19 +87,16 @@ $transition: 0.15s;
 		&:focus ~ .inputBorder {
 			border: 2px solid rgb(0,0,0);
 		}
-
 		&:focus ~ label, &:not(:placeholder-shown) ~ label {
 			top: -6px;
 			left: 8px;
 			font-size: 0.7em;
 			padding: 0 4px;
 		}
-
 		&::placeholder {
 			color: rgba(0,0,0,0);
 		}
 	}
-
 	.inputBorder {
 		position: absolute;
 		top: 0;
