--- a/app/scss/_memberPage.scss
+++ b/app/scss/_memberPage.scss
@@ -23,6 +23,22 @@ body {
 		}
 		overflow: hidden;
 	}
+	&.homeDash {
+		.dialogContainer {
+			background-color: lighten($background, 10%);
+			.inputField {
+				.inputBorder {
+					border: 1px solid rgba($textColor, 0.2);
+				}
+				&:hover .inputBorder {
+					border: 1px solid rgba($textColor, 0.5);
+				}
+			}
+			.caption {
+				color: rgba(white, 0.5);
+			}
+		}
+	}
 }
 
 .admin {
@@ -31,26 +47,30 @@ body {
 	@media (max-width: 700px) {
 		width: 90%;
 	}
-	margin: 0 auto;
 	display: flex;
-	justify-content: space-between;
+	flex-direction: column;
+	justify-content: center;
 	align-items: center;
-	padding: 20px 0;
+	margin: 24px auto;
 	position: relative;
-	a, button {
-		padding: 4px 12px;
-		border-radius: 4px;
-		font-size: 1em;
-		cursor: pointer;
-		text-decoration: none;
-		text-align: center;
-		transition: box-shadow 0.3s, background-color 0.3s;
-		border: none;
-		color: white;
-		background-color: #6BC781;
-		&:hover {
-			box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
-			background-color: darken(#6BC781, 10%);
+	.adminButtons {
+		margin-top: 16px;
+		a, button {
+			margin: 0 4px;
+			padding: 4px 12px;
+			border-radius: 8px;
+			font-size: 1em;
+			cursor: pointer;
+			text-decoration: none;
+			text-align: center;
+			transition: box-shadow 0.3s, background-color 0.3s;
+			border: none;
+			color: white;
+			background-color: #6BC781;
+			&:hover {
+				box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+				background-color: darken(#6BC781, 10%);
+			}
 		}
 	}
 	h2 {
@@ -74,7 +94,7 @@ body {
 		transform: translate(-50%, -50%);
 		background-color: white;
 		padding: 24px;
-		border-radius: 24px;
+		border-radius: 8px;
 		> h3 {
 			margin-bottom: 8px;
 		}
@@ -92,19 +112,20 @@ body {
 				transition: box-shadow 0.3s, background-color 0.3s;
 				border: none;
 				color: white;
+				outline: none;
 				&:hover {
 					box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 				}
 				&.accept {
-					background-color: #6BC781;
+					background-color: darken(#6BC781, 10%);
 					&:hover {
-						background-color: darken(#6BC781, 10%);
+						background-color: #6BC781;
 					}
 				}
 				&.cancel {
-					background-color: #EA7B7B;
+					background-color: darken(#EA7B7B, 10%);
 					&:hover {
-						background-color: darken(#EA7B7B, 10%);
+						background-color: #EA7B7B;
 					}
 				}
 			}
@@ -148,7 +169,7 @@ body {
 		@media (max-width: 700px) {
 			width: calc(100% - 24px);
 		}
-		border-radius: 18px;
+		border-radius: 8px;
 		background-color: white;
 		box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
 		padding: 12px;
