a few QOL changes

--- a/app/scss/_homePage.scss
+++ b/app/scss/_homePage.scss
@@ -182,3 +182,7 @@ $breakPoint3: 880px;
 div[data-tune="withBorder"], div[data-tune="withBackground"] {
 	display: none;
 }
+
+.image-tool__image {
+	margin-top: 30px;
+}
