--- a/app/css/main.css
+++ b/app/css/main.css
@@ -236,6 +236,9 @@ body.theme {
 div[data-tune="withBorder"], div[data-tune="withBackground"] {
   display: none; }
 
+.image-tool__image {
+  margin-top: 30px; }
+
 body.view {
   background-color: #222;
   color: white; }
