--- a/app/scss/_homePage.scss
+++ b/app/scss/_homePage.scss
@@ -25,8 +25,8 @@ $breakPoint3: 880px;
 
 #snackbar {
 	min-width: 300px;
-	max-width: 600px;
-	height: 48px;
+	max-width: 80%;
+	min-height: 48px;
 	position: fixed;
 	bottom: -54px;
 	left: 50%;
