Font changes and bug fixes

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,7 @@ $headerAmount: 230px;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 body {
