--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,13 @@ body {
       #footer #content .block iframe {
         width: 100%; }
 
+.logo {
+  width: 60%;
+  margin: 24px auto;
+  text-align: center; }
+  .logo img {
+    width: 300px; }
+
 .container {
   margin: 24px auto;
   width: 1600px;
@@ -130,6 +137,13 @@ body {
   .container .topArea .filter {
     margin-bottom: 24px;
     text-align: center; }
+    @media (max-width: 700px) {
+      .container .topArea .filter {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; }
+        .container .topArea .filter button {
+          margin: 12px 24px !important; } }
     .container .topArea .filter button {
       padding: 12px 24px;
       background-color: #222;
