--- a/app/scss/_homePage.scss
+++ b/app/scss/_homePage.scss
@@ -21,8 +21,13 @@ $breakPoint3: 880px;
 			color: white;
 		}
 	}
-	.ce-paragraph[data-placeholder]:empty::before {
-		color: rgba(white, 0.7);
+	.ce-paragraph {
+		a {
+			color: rgb(223,29,36);
+		}
+		&[data-placeholder]:empty::before {
+			color: rgba(white, 0.7);
+		}
 	}
 	.cdx-notify {
 		background-color: lighten(#222, 7%) !important;
