--- a/app/scss/_viewPage.scss
+++ b/app/scss/_viewPage.scss
@@ -79,6 +79,9 @@ body.view {
 			&.full {
 				width: 100% !important;
 			}
+			a {
+				color: rgb(223,29,36);
+			}
 			img {
 				width: 100%;
 				border-radius: 4px;
