--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@
   font-family: 'Montserrat', sans-serif; }
 
 body {
-  background-color: #222;
-  color: white; }
+  background-color: white;
+  color: black; }
   body.active {
     overflow-y: hidden; }
 
@@ -99,8 +99,6 @@ body {
       margin: 16px auto; }
       #footer #content .block.full {
         width: 100% !important; }
-      #footer #content .block a {
-        color: #df1d24; }
       #footer #content .block img {
         width: 100%;
         border-radius: 4px; }
@@ -120,6 +118,58 @@ body {
   .logo img {
     width: 300px; }
 
+.topArea {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center; }
+  .topArea .filter {
+    margin-bottom: 24px;
+    text-align: center; }
+    @media (max-width: 754px) {
+      .topArea .filter {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; }
+        .topArea .filter button {
+          margin: 12px 24px !important; } }
+    .topArea .filter button {
+      padding: 12px 24px;
+      background-color: white;
+      border-radius: 8px;
+      color: black;
+      margin: 0 24px;
+      cursor: pointer;
+      font-size: 1em;
+      outline: none;
+      position: relative;
+      border: none;
+      transition: background-color 0.5s ease, color 0.5s ease; }
+      @media (max-width: 828px) {
+        .topArea .filter button {
+          padding: 12px; } }
+      .topArea .filter button .buttonBorder {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 1px solid black;
+        border-radius: 8px;
+        transition: 0.5s;
+        pointer-events: none; }
+      .topArea .filter button:hover .buttonBorder {
+        border: 4px solid black; }
+      .topArea .filter button#graphicBtn.active {
+        background-color: #df1d24; }
+      .topArea .filter button#gameBtn.active {
+        background-color: #e3a6c2; }
+      .topArea .filter button#webBtn.active {
+        background-color: #db8b2d; }
+      .topArea .filter button.active {
+        color: white; }
+        .topArea .filter button.active .buttonBorder {
+          border: none; }
+
 .container {
   margin: 24px auto;
   width: 1600px;
@@ -136,48 +186,6 @@ body {
   @media (max-width: 500px) {
     .container {
       width: 96%; } }
-  .container .topArea .filter {
-    margin-bottom: 24px;
-    text-align: center; }
-    @media (max-width: 700px) {
-      .container .topArea .filter {
-        display: flex;
-        flex-direction: column;
-        justify-content: center; }
-        .container .topArea .filter button {
-          margin: 12px 24px !important; } }
-    .container .topArea .filter button {
-      padding: 12px 24px;
-      background-color: #222;
-      border-radius: 8px;
-      color: white;
-      margin: 0 24px;
-      cursor: pointer;
-      font-size: 1em;
-      outline: none;
-      position: relative;
-      border: none;
-      transition: 0.5s; }
-      .container .topArea .filter button .buttonBorder {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border: 1px solid white;
-        border-radius: 8px;
-        transition: 0.5s;
-        pointer-events: none; }
-      .container .topArea .filter button:hover .buttonBorder {
-        border: 4px solid white; }
-      .container .topArea .filter button#graphicBtn.active {
-        background-color: rgba(223, 29, 36, 0.95); }
-      .container .topArea .filter button#gameBtn.active {
-        background-color: rgba(227, 166, 194, 0.95); }
-      .container .topArea .filter button#webBtn.active {
-        background-color: rgba(219, 139, 45, 0.95); }
-      .container .topArea .filter button.active .buttonBorder {
-        border: none; }
   .container #students {
     display: flex;
     flex-wrap: wrap; }
@@ -190,7 +198,7 @@ body {
       cursor: pointer;
       padding: 16px;
       border-radius: 8px;
-      background-color: #2f2f2f; }
+      background-color: #f2f2f2; }
       @media (max-width: 1600px) {
         .container #students .card {
           width: calc((100% / 3) - 24px); } }
