--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,9 +9,12 @@ $webColor: rgb(219, 139, 45);
 $graphicColor: rgb(223, 29, 36);
 $gameColor: rgb(227, 166, 194);
 
-$background: #222;
-$backgroundCard: lighten($background, 5%);
-$textColor: white;
+// $background: #222;
+// $backgroundCard: lighten($background, 5%);
+// $textColor: white;
+$background: white;
+$backgroundCard: darken($background, 5%);
+$textColor: black;
 
 $headerAmount: 230px;
 
@@ -131,9 +134,6 @@ body {
 			&.full {
 				width: 100% !important;
 			}
-			a {
-				color: rgb(223,29,36);
-			}
 			img {
 				width: 100%;
 				border-radius: 4px;
@@ -161,6 +161,69 @@ body {
 	}
 }
 
+.topArea {
+	width: 100%;
+	margin: 0 auto;
+	text-align: center;
+	.filter {
+		margin-bottom: 24px;
+		text-align: center;
+		@media (max-width: 754px) {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			button {
+				margin: 12px 24px !important;
+			}
+		}
+		button {
+			padding: 12px 24px;
+			@media (max-width: 828px) {
+				padding: 12px;
+			}
+			background-color: $background;
+			border-radius: 8px;
+			color: $textColor;
+			margin: 0 24px;
+			cursor: pointer;
+			font-size: 1em;
+			outline: none;
+			position: relative;
+			border: none;
+			transition: background-color 0.5s ease, color 0.5s ease;
+			.buttonBorder {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				border: 1px solid $textColor;
+				border-radius: 8px;
+				transition: 0.5s;
+				pointer-events: none;
+			}
+			&:hover .buttonBorder {
+				border: 4px solid $textColor;
+			}
+			&#graphicBtn.active {
+				background-color: $graphicColor;
+			}
+			&#gameBtn.active {
+				background-color: $gameColor;
+			}
+			&#webBtn.active {
+				background-color: $webColor;
+			}
+			&.active {
+				color: white;
+				.buttonBorder {
+					border: none;
+				}
+			}
+		}
+	}
+}
+
 .container {
 	margin: 24px auto;
 	width: 1600px;
@@ -177,61 +240,7 @@ body {
 	@media (max-width: $viewBreakPoint4) {
 		width: 96%;
 	}
-	.topArea {
-		.filter {
-			margin-bottom: 24px;
-			text-align: center;
-			@media (max-width: 700px) {
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				button {
-					margin: 12px 24px !important;
-				}
-			}
-			button {
-				padding: 12px 24px;
-				background-color: $background;
-				border-radius: 8px;
-				color: white;
-				margin: 0 24px;
-				cursor: pointer;
-				font-size: 1em;
-				outline: none;
-				position: relative;
-				border: none;
-				transition: 0.5s;
-				.buttonBorder {
-					position: absolute;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 100%;
-					border: 1px solid white;
-					border-radius: 8px;
-					transition: 0.5s;
-					pointer-events: none;
-				}
-				&:hover .buttonBorder {
-					border: 4px solid white;
-				}
-				&#graphicBtn.active {
-					background-color: rgba($graphicColor, 95%);
-				}
-				&#gameBtn.active {
-					background-color: rgba($gameColor, 95%);
-				}
-				&#webBtn.active {
-					background-color: rgba($webColor, 95%);
-				}
-				&.active {
-					.buttonBorder {
-						border: none;
-					}
-				}
-			}
-		}
-	}
+
 	#students {
 		display: flex;
 		flex-wrap: wrap;
