--- a/app/scss/_viewPage.scss
+++ b/app/scss/_viewPage.scss
@@ -84,7 +84,7 @@ $headerHeight: 230px;
 				border-radius: 4px;
 			}
 			.caption {
-				color: rgba(white, 0.50);
+				color: rgba(black, 0.50);
 				font-style: italic;
 				font-size: 0.9em;
 				margin: 6px auto;
