--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4,22 +4,6 @@
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif; }
 
-body.theme {
-  background-color: #222;
-  color: white; }
-  body.theme .loginBox {
-    background-color: #2f2f2f; }
-  body.theme .inputField input, body.theme .inputField label {
-    background-color: #2f2f2f; }
-  body.theme .inputField input {
-    color: white; }
-  body.theme .inputField input:focus ~ .inputBorder {
-    border: 2px solid white; }
-  body.theme .inputField .inputBorder {
-    border: 1px solid rgba(255, 255, 255, 0.2); }
-  body.theme .inputField:hover .inputBorder {
-    border: 1px solid rgba(255, 255, 255, 0.5); }
-
 .loginBox {
   padding: 24px;
   position: absolute;
@@ -245,7 +229,7 @@ div[data-tune="withBorder"], div[data-tune="withBackground"] {
     width: 100%;
     height: 100%;
     opacity: 0.05;
-    background-image: url("../images/lines.gif");
+    background-image: url("../images/lines.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; }
@@ -321,11 +305,11 @@ body.addProfileImage {
   body.addProfileImage #uplaodImageDialog {
     display: block !important; }
 body.homeDash .dialogContainer {
-  background-color: #3c3c3c; }
+  background-color: white; }
   body.homeDash .dialogContainer .inputField .inputBorder {
-    border: 1px solid rgba(255, 255, 255, 0.2); }
+    border: 1px solid rgba(0, 0, 0, 0.2); }
   body.homeDash .dialogContainer .inputField:hover .inputBorder {
-    border: 1px solid rgba(255, 255, 255, 0.5); }
+    border: 1px solid rgba(0, 0, 0, 0.5); }
   body.homeDash .dialogContainer .caption {
     color: rgba(255, 255, 255, 0.5); }
 
