--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,16 +8,13 @@ $cardMargin: 24px;
 $webColor: rgb(219, 139, 45);
 $graphicColor: rgb(223, 29, 36);
 $gameColor: rgb(227, 166, 194);
+$secondaryColor: rgb(4, 54, 115);
 
-// $background: #222;
-// $backgroundCard: lighten($background, 5%);
-// $textColor: white;
 $background: white;
 $backgroundCard: darken($background, 5%);
 $textColor: black;
 
 $headerAmount: 230px;
-
 
 * {
 	margin: 0;
@@ -51,7 +48,7 @@ body {
 		width: 100%;
 		height: 100%;
 		opacity: 0.05;
-		background-image: url('../images/lines.gif');
+		background-image: url('../images/lines.png');
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -166,21 +163,37 @@ body {
 	margin: 0 auto;
 	text-align: center;
 	.filter {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
 		margin-bottom: 24px;
 		text-align: center;
-		@media (max-width: 754px) {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			button {
-				margin: 12px 24px !important;
+		@media (max-width: 986px) {
+			.group2 {
+				margin-top: 24px;
+			}
+		}
+		@media (max-width: 700px) {
+			width: 80%;
+			margin: 0 auto;
+			.group1, .group2 {
+				margin: 0;
+				width: 100%;
+				button {
+					display: block;
+					width: 100%;
+					text-align: center;
+					margin: 0 0 24px 0;
+				}
+			}
+			.group2 {
+				button:last-of-type {
+					margin-bottom: 0;
+				}
 			}
 		}
 		button {
 			padding: 12px 24px;
-			@media (max-width: 828px) {
-				padding: 12px;
-			}
 			background-color: $background;
 			border-radius: 8px;
 			color: $textColor;
@@ -205,17 +218,67 @@ body {
 			&:hover .buttonBorder {
 				border: 4px solid $textColor;
 			}
-			&#graphicBtn.active {
-				background-color: $graphicColor;
+			&#allBtn {
+				color: $secondaryColor;
+				.buttonBorder {
+					border: 1px solid $secondaryColor;
+				}
+				&:hover {
+					.buttonBorder {
+						border: 4px solid $secondaryColor;
+					}
+				}
+				&.active {
+					background-color: $secondaryColor;
+					color: white;
+				}
 			}
-			&#gameBtn.active {
-				background-color: $gameColor;
+			&#graphicBtn {
+				color: $graphicColor;
+				.buttonBorder {
+					border: 1px solid $graphicColor;
+				}
+				&:hover {
+					.buttonBorder {
+						border: 4px solid $graphicColor;
+					}
+				}
+				&.active {
+					background-color: $graphicColor;
+					color: white;
+				}
 			}
-			&#webBtn.active {
-				background-color: $webColor;
+			&#gameBtn {
+				color: $gameColor;
+				.buttonBorder {
+					border: 1px solid $gameColor;
+				}
+				&:hover {
+					.buttonBorder {
+						border: 4px solid $gameColor;
+					}
+				}
+				&.active {
+					background-color: $gameColor;
+					color: white;
+				}
+			}
+			&#webBtn {
+				color: $webColor;
+				.buttonBorder {
+					border: 1px solid $webColor;
+				}
+				&:hover {
+					.buttonBorder {
+						border: 4px solid $webColor;
+					}
+				}
+				&.active {
+					background-color: $webColor;
+					color: white;
+				}
 			}
 			&.active {
-				color: white;
 				.buttonBorder {
 					border: none;
 				}
